[project]
name = "quantization-self-distillation"
version = "0.1.0"
description = "A quantization-aware self-distillation framework for LLMs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes>=0.49.2",
    "causal-conv1d>=1.6.1",
    "datasets>=4.8.4",
    "flash-linear-attention>=0.4.2",
    "peft>=0.18.1",
    "torch>=2.11.0",
    "torchao>=0.14.0",
    "transformers>=5.5.0",
]
